--- a/CrudAspNetCoreX/CrudAspNetCoreX/Views/Contato/Index.cshtml
+++ b/CrudAspNetCoreX/CrudAspNetCoreX/Views/Contato/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@* @model List<ContatoModel> *@
+﻿ @model List<ContatoModel> 
 @{
     ViewData["Title"] = "Listagem de Contatos";
 }
@@ -11,22 +11,22 @@
 
     <br />
 
-   @*  @if (TempData["MensagemSucesso"] != null)
+    @*  @if (TempData["MensagemSucesso"] != null)
     {
-        <div class="alert alert-success" role="alert">
-            <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
-            @TempData["MensagemSucesso"]
-        </div>
+    <div class="alert alert-success" role="alert">
+    <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
+    @TempData["MensagemSucesso"]
+    </div>
     }
 
     @if (TempData["MensagemErro"] != null)
     {
-        <div class="alert alert-danger" role="alert">
-            <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
-            @TempData["MensagemErro"]
-        </div>
+    <div class="alert alert-danger" role="alert">
+    <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
+    @TempData["MensagemErro"]
+    </div>
     }
- *@
+    *@
     <br />
 
     <h1 class="display-4">Listagem de contatos</h1>
@@ -42,7 +42,7 @@
             </tr>
         </thead>
         <tbody>
-   @*          @if (Model != null && Model.Any())
+            @if (Model != null && Model.Any())
             {
                 foreach (var contato in Model)
                 {
@@ -64,7 +64,7 @@
             {
                 <tr class="odd"><td valign="top" colspan="5">Nenhum contato encontrado</td></tr>
             }
-    *@     </tbody>
+        </tbody>
     </table>
 
 </div>
