--- a/CrudAspNetCoreX/CrudAspNetCoreX/Views/Shared/_Layout.cshtml
+++ b/CrudAspNetCoreX/CrudAspNetCoreX/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Contato</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contato">Privacy</a>
                         </li>
                     </ul>
                 </div>
