--- a/CrudAspNetCoreX/CrudAspNetCoreX/Views/Contato/Index.cshtml
+++ b/CrudAspNetCoreX/CrudAspNetCoreX/Views/Contato/Index.cshtml
@@ -11,7 +11,7 @@
 
     <br />
 
-    @*  @if (TempData["MensagemSucesso"] != null)
+     @if (TempData["MensagemSucesso"] != null)
     {
     <div class="alert alert-success" role="alert">
     <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
@@ -26,7 +26,7 @@
     @TempData["MensagemErro"]
     </div>
     }
-    *@
+   
     <br />
 
     <h1 class="display-4">Listagem de contatos</h1>
@@ -54,7 +54,7 @@
                         <td>
                             <div class="btn-group" role="group">
                                 <a role="button" asp-action="Editar" asp-controller="Contato" asp-route-id="@contato.Id" class="btn btn-primary">Editar</a>
-                                <a role="button" asp-action="ApagarConfirmacao" asp-controller="Contato" asp-route-id="@contato.Id" class="btn btn-danger">Apagar</a>
+                                <a role="button" asp-action="Apagar" asp-controller="Contato" asp-route-id="@contato.Id" class="btn btn-danger">Apagar</a>
                             </div>
                         </td>
                     </tr>
